Fixé l'align du lien des vocarookles

--- a/static/style.css
+++ b/static/style.css
@@ -263,6 +263,10 @@ a:hover, .sound:hover, #sidebtns > img:hover, #chatentry > img:hover, #prefs inp
 	font-family: monospace;
 }
 
+.vocalink {
+    vertical-align : middle;
+}
+
 .part {
 	color: #1AC;
 }
